# smac_unified

./: .gitignore  CHANGELOG.md  LICENSE  MIGRATION.md  README.md  pyproject.toml
docs/: README.md  developer-guide.md  implementation-architecture.md  user-guide.md
smac_unified/: __init__.py  adapters.py  env_factory.py  types.py
smac_unified/backends/: __init__.py  base.py  bridge.py  native.py  registry.py
smac_unified/builders/: __init__.py  base.py  defaults.py
smac_unified/compat/: __init__.py  legacy.py
smac_unified/config/: __init__.py  logic_switches.py
smac_unified/core/: __init__.py  action_codec.py  env_core.py  obs_state.py  reward_model.py  sc2session.py  session.py  session_sc2env.py  smac_env.py  switches.py  unified_env.py  (+1 more)
tests/: __init__.py  test_action_parity.py  test_api_parity.py  test_backend_registry.py  test_bridge_tools.py  test_dependency_contract.py  test_handler_factory.py  test_legacy_compat.py  test_logic_switches.py  test_native_builders.py  test_obs_state_parity.py  test_parity_matrix.py  test_reset_capability_parity.py  test_reward_outcome_parity.py  test_scripted_runtime.py  test_session_async.py  test_unit_tracker.py  test_validation_parity.py  test_vector_pool.py
tools/: native_core_validation.json  native_core_validation.py  native_core_validation_throughput_sanity.json  native_core_validation_transport_b0.json  native_core_validation_transport_b1.json  native_core_validation_transport_b2.json  native_core_validation_transport_b3.json  native_core_validation_transport_b4.json  run_core_tests.py  run_internal_rc_gate.sh
(+90 files in other folders)
