[build-system]
requires = ['setuptools>=68', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'smac-unified'
version = '0.1.0'
description = 'Standalone modular unified API for SMAC-family environments.'
readme = 'README.md'
requires-python = '>=3.9'
dependencies = [
  'numpy>=1.21',
]

[project.optional-dependencies]
native-backend = ['pysc2', 's2clientprotocol']
legacy-backends = []

[tool.setuptools.packages.find]
include = ['smac_unified*']
